layout problem fixed, zoomed-out page and readjusted elements

--- a/style.css
+++ b/style.css
@@ -5,10 +5,9 @@
     font-style: normal;
 }
 
-body {
-    background: #f7d7d5;
-    overflow: hidden;
-
+.body {
+background: #f7d7d5;
+overflow: hidden;
 }
 
 .Frame3{
@@ -60,14 +59,14 @@ width: auto; / automatically adjust the width based on the content */
 }
 
 .Frame2{
-padding-top: 200px;
+padding-top: 80px;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: flex-start;
 position: relative;
 width: 100vw;
-background: #f7d7d5;
+background: transparent;
 }
 
 .box_frame2{
@@ -79,10 +78,10 @@ gap: 75px;
 }
 
 .cv {
-    font-family: 'AG Old Face';
+font-family: 'AG Old Face';
 font-style: normal;
 font-weight: 500;
-font-size: 27px;
+font-size: 22px;
 line-height: 32px;
 color: #000000;
 
@@ -92,7 +91,7 @@ color: #000000;
     font-family: 'AG Old Face';
 font-style: normal;
 font-weight: 500;
-font-size: 27px;
+font-size: 22px;
 line-height: 32px;
 
 color: #000000;
@@ -105,7 +104,7 @@ color: #000000;
     font-family: 'AG Old Face';
 font-style: normal;
 font-weight: 500;
-font-size: 27px;
+font-size: 22px;
 line-height: 32px;
 
 color: #000000;
@@ -115,7 +114,7 @@ color: #000000;
 font-family: 'AG Old Face';
 font-style: normal;
 font-weight: 500;
-font-size: 27px;
+font-size: 22px;
 line-height: 32px;
 
 color: #000000;
@@ -125,7 +124,7 @@ color: #000000;
 font-family: 'AG Old Face';
 font-style: normal;
 font-weight: 500;
-font-size: 27px;
+font-size: 22px;
 line-height: 32px;
 
 color: #000000;
@@ -150,7 +149,7 @@ a:link {
 /*.IMCN .description,*/
 /*.NDDL*/
 .description {
-  font-size: 20px;
+  font-size: 17px;
   opacity: 0;
   position: absolute;
   right: 35;
@@ -168,7 +167,7 @@ a:link {
 .IMCN .description,
 .LT .description,
 .NDDL .description {
-    top: 200px;
+    top: 45px;
     right: 25px;
 }
 .IMCN:hover .description,
@@ -176,7 +175,7 @@ a:link {
 .NDDL:hover .description {
 
   opacity: 1;
-  font-size: 20px;
+  font-size: 17px;
 
 }
 
